manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: architect-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: kuvalkin.architect
    http:
      paths:
        - path: /app($|/)(.*)
          pathType: Prefix
          backend:
            service:
              name: architect-service
              port:
                number: 9000
